# timing-oracle

./: .devenv.flake.nix  .gitignore  AGENTS.md  Cargo.toml  README.md  TESTING.md  devenv.nix  nextest.toml  test_rayon_stack.rs
.config/: nextest.toml
.devenv/: devenv.json  flake.json  input-paths.txt  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db
.devenv/gc/: shell-1-link
.devenv/state/cargo-install/: .crates.toml  .crates2.json
.github/workflows/: ci.yml
benches/: comparison.rs  oracle.rs
benches/comp/: metrics.rs  mod.rs  report.rs  test_cases.rs
benches/comp/adapters/: dudect_adapter.rs  dudect_parser.rs  dudect_template.rs  mod.rs  timing_oracle_adapter.rs
docs/: api-reference.md  architecture.md  guide.md  spec.md  spec_gap_checklist.md  test-harness-adapter.md  troubleshooting.md
examples/: README.md  aes.rs  bench_bootstrap.rs  bench_correct_counts.rs  benchmark_baseline.rs  ci_integration.rs  clamping_demo.rs  compare.rs  compare_mde_methods.rs  profile.rs  profile_detailed.rs  profile_oracle.rs  simple.rs  test_exact_copy.rs  test_no_batch.rs  test_reset_bug.rs  test_xor.rs
src/: builder.rs  ci.rs  config.rs  helpers.rs  lib.rs  oracle.rs  result.rs  thread_pool.rs  types.rs
src/analysis/: bayes.rs  ci_gate.rs  diagnostics.rs  effect.rs  mde.rs  mod.rs
src/measurement/: collector.rs  cycle_timer.rs  kperf.rs  mod.rs  outlier.rs  perf.rs  timer.rs
src/output/: json.rs  terminal.rs
src/preflight/: generator.rs  mod.rs  resolution.rs  sanity.rs  system.rs
src/statistics/: autocorrelation.rs  bootstrap.rs  covariance.rs  mod.rs  quantile.rs
tests/: aead_timing.rs  aes_timing.rs  async_timing.rs  builder_tests.rs  calibration.rs  ci_builder.rs  concurrency_test.rs  crypto_attacks.rs  debug_mde.rs  ecc_timing.rs  hash_timing.rs  helpers_test.rs  integration.rs  known_leaky.rs  known_safe.rs  macro_compile_errors.rs  macro_tests.rs  pqcrypto_timing.rs  reliability.rs  rsa_timing.rs  test_kperf.rs  test_perf.rs
tests/ui/: duplicate_field.rs  duplicate_field.stderr  measure_not_closure.rs  measure_not_closure.stderr  missing_baseline.rs  missing_baseline.stderr  missing_measure.rs  missing_measure.stderr  missing_sample.rs  missing_sample.stderr  sample_not_closure.rs  sample_not_closure.stderr  unknown_field.rs  unknown_field.stderr
timing-oracle-macros/: Cargo.toml
timing-oracle-macros/src/: lib.rs  parse.rs
