[package]
name = "timing-oracle"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Detect timing side channels in cryptographic code"
keywords = ["security", "cryptography", "timing", "side-channel"]
categories = ["cryptography", "development-tools::testing"]

[dependencies]
colored = "3.0.0"
nalgebra = { version = "0.34.1", default-features = false, features = ["std"] }
rand = "0.9.2"
rand_distr = "0.5.1"
rayon = { version = "1.11.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[dev-dependencies]
aes-gcm = "0.10.3"
subtle = "2.6.1"
criterion = "0.8"

[features]
default = []
parallel = ["dep:rayon"]
macros = []
