[package]
name = "timing-oracle-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Proc macros for timing-oracle timing side-channel detection"
repository = "https://github.com/agucova/timing-oracle"
keywords = ["timing", "side-channel", "security", "cryptography", "testing"]
categories = ["development-tools::testing", "cryptography"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
